--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     -  assets/images/wlcm.jpg
-
+    -  assets/lock.jpg
+    - assets/123.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
